
2021-12-22 17:08 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
  * extgui.prg
  + fconnect.prg
    * 

2021-12-14 11:05 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Fonts handling fixed.
  * tests/test1.prg
    ! Fixes

2021-12-11 21:25 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * extgui_classes.prg
    ! Adding menu items fixed.

2019-05-16 11:35 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Support for mutiply logical columns in a browse added.

2019-04-26 14:55 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Support for SelectFolder added.

2019-04-19 11:10 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Few fixes.

2019-04-18 20:52 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Support for NoExitOnEsc and NoCloseAble dialog properties added.

2019-04-18 20:15 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Setting browse array changed.

2019-04-18 17:02 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Small fix

2019-04-18 16:44 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Added support for Hide() method and SelectNode() function.

2019-02-18 12:42 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Icon support for dialogs added.

2019-02-12 21:14 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Small fix in Panic()

2019-01-16 10:04 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * source files (*.prg, *.c) has been moved to 'source' directory,
    build files updated.

2019-01-15 13:15 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * gs_Run() added.
    * It is possibly now to build guiserver as a harbour library, using the -DGUIS_LIB.
  * extgui.prg
  * hbip.c
  * listen.c
    * hb_ prefixes has been changed to gs_

2019-01-09 18:30 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg